Fix alignment of article stubs in section stubs

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -561,6 +561,7 @@ input#section_name {
 
 .article_stub .stub_title {
 	font-size:90%;
+    height: 42px;
 }
 
 .article_stub .stub_author {
@@ -590,7 +591,7 @@ input#section_name {
 	font-family: 'Open Sans', sans-serif;
 	width: 34%;
 	float: left;
-	height: 505px;
+	height: 525px;
 	margin-right: auto;
 	margin-left: auto;
 }
